@@ -370,6 +370,9 @@ Library
 
 - Issue #17926: Fix dbm.__contains__ on 64-bit big-endian machines.
 
+- Issue #19267: Fix support of multibyte encoding (ex: UTF-16) in the logging
+  module.
+
 - Issue #17918: When using SSLSocket.accept(), if the SSL handshake failed
   on the new socket, the socket would linger indefinitely.  Thanks to
   Peter Saveliev for reporting.
